--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/movieflix-logo.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ff6b6b" />
     <meta
       name="description"
-      content="Movie Ticket Booking Application"
+      content="MovieFlix - Your ultimate movie ticket booking platform"
     />
-    <title>Movie Ticket Booking</title>
+    <title>MovieFlix - Movie Ticket Booking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
